force-app/main/default/objects/SPA_Request__c/SPA_Request__c.object-meta.xml
<CustomObject>
    <label>SPA Request</label>
    <nameField>
        <displayFormat>S-{000000}-{YY}-{MM}-{DD}</displayFormat>
        <label>PA Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPA Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>