force-app/main/default/objects/SPA_Request__c/fields/Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_By__c</fullName>
    <label>Acknowledged By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>