force-app/main/default/objects/SPA_Request__c/fields/AgreementEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementEffectiveDate__c</fullName>
    <description>Agreement Effective Date</description>
    <label>Agreement Effective Date</label>
    <type>Date</type>
</CustomField>