force-app/main/default/objects/SPA_Request__c/fields/AgreementExpireDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementExpireDate__c</fullName>
    <defaultValue>DATE(2999,12,31)</defaultValue>
    <description>Agreement Expiration Date</description>
    <label>Agreement Expire Date</label>
    <type>Date</type>
</CustomField>