force-app/main/default/objects/SPA_Request__c/fields/AgreementType__c.field-meta.xml
<CustomField>
    <fullName>AgreementType__c</fullName>
    <label>Agreement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>