force-app/main/default/objects/SPA_Request__c/fields/Annual_Percentage_Revenue_Response__c.field-meta.xml
<CustomField>
    <fullName>Annual_Percentage_Revenue_Response__c</fullName>
    <label>Annual Percentage Revenue</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>