force-app/main/default/objects/SPA_Request__c/fields/Annual_Potential_Revenue_Response__c.field-meta.xml
<CustomField>
    <fullName>Annual_Potential_Revenue_Response__c</fullName>
    <label>Annual Potential Revenue Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>