force-app/main/default/objects/SPA_Request__c/fields/AuthorizeEligible__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Price Alpha can auto approve SPA Request</description>
    <label>Authorize Eligible</label>
    <type>Checkbox</type>
</CustomField>