force-app/main/default/objects/SPA_Request__c/fields/AutoAcknowledge__c.field-meta.xml
<CustomField>
    <fullName>AutoAcknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to indicate if Acknowledgement should be automated once Authorized.</description>
    <label>Auto Acknowledge</label>
    <type>Checkbox</type>
</CustomField>