force-app/main/default/objects/SPA_Request__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Purchaser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPA Requests (Primary Purchaser)</relationshipLabel>
    <relationshipName>SPA_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>