force-app/main/default/objects/SPA_Request__c/fields/Competitive_Source_Feedback_Response__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Source_Feedback_Response__c</fullName>
    <label>Competitive Source Feedback Response</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>