force-app/main/default/objects/SPA_Request__c/fields/Customer_Last12_Sales__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last12_Sales__c</fullName>
    <description>This field is using the “Rolling_12_Month_Sales__c” from Account instead of “Last_12_Month_Sales__c”</description>
    <label>Rolling 12 Month Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>