force-app/main/default/objects/SPA_Request__c/fields/Customer_Secondary_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Secondary_Business_Type__c</fullName>
    <label>Customer Secondary Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>