force-app/main/default/objects/SPA_Request__c/fields/DisplayStatus__c.field-meta.xml
<CustomField>
    <fullName>DisplayStatus__c</fullName>
    <label>Display Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>