force-app/main/default/objects/SPA_Request__c/fields/DistributorOwner__c.field-meta.xml
<CustomField>
    <fullName>DistributorOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to capture the owner of a SPA Request - Distributor who submits for internal review.</description>
    <label>Distributor Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPARequestDistributorOwners</relationshipName>
    <type>Lookup</type>
</CustomField>