force-app/main/default/objects/SPA_Request__c/fields/DropShipAdjustmentFactor__c.field-meta.xml
<CustomField>
    <fullName>DropShipAdjustmentFactor__c</fullName>
    <description>Field used to indicate the percentage requested for Drop Ship Eligibility</description>
    <label>Drop Ship Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>