force-app/main/default/objects/SPA_Request__c/fields/DropShipEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DropShipEffectiveDate__c</fullName>
    <description>Drop Ship  Eligibility Effective Date</description>
    <label>Drop Ship Effective  Date</label>
    <type>Date</type>
</CustomField>