force-app/main/default/objects/SPA_Request__c/fields/DropShipEligibility__c.field-meta.xml
<CustomField>
    <fullName>DropShipEligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to indicate if Drop Ship Eligibility is being requested at a header level.</description>
    <label>Drop Ship Eligibility</label>
    <type>Checkbox</type>
</CustomField>