force-app/main/default/objects/SPA_Request__c/fields/DropShipExpireDate__c.field-meta.xml
<CustomField>
    <fullName>DropShipExpireDate__c</fullName>
    <description>Drop Ship  Eligibility Expiration Date</description>
    <label>Drop Ship Expire  Date</label>
    <type>Date</type>
</CustomField>