force-app/main/default/objects/SPA_Request__c/fields/Group_SPA_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Group_SPA_Recommendation__c</fullName>
    <label>Group SPA Recommendation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>