force-app/main/default/objects/SPA_Request__c/fields/GroupSpaDescription__c.field-meta.xml
<CustomField>
    <fullName>GroupSpaDescription__c</fullName>
    <description>Field to store PI SPA Group Recommendation record description.</description>
    <label>Group Spa Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>