force-app/main/default/objects/SPA_Request__c/fields/GroupSpaSize__c.field-meta.xml
<CustomField>
    <fullName>GroupSpaSize__c</fullName>
    <description>Group SPA Size</description>
    <label>Group SPA Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>