force-app/main/default/objects/SPA_Request__c/fields/hasGroupModalBeenDisplayed__c.field-meta.xml
<CustomField>
    <fullName>hasGroupModalBeenDisplayed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>hasGroupModalBeenDisplayed</label>
    <type>Checkbox</type>
</CustomField>