force-app/main/default/objects/SPA_Request__c/fields/Hot_c__c.field-meta.xml
<CustomField>
    <fullName>Hot_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot__c</label>
    <type>Checkbox</type>
</CustomField>