force-app/main/default/objects/SPA_Request__c/fields/IndirectTerritory__c.field-meta.xml
<CustomField>
    <fullName>IndirectTerritory__c</fullName>
    <label>Indirect Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>