force-app/main/default/objects/SPA_Request__c/fields/InternalOwner__c.field-meta.xml
<CustomField>
    <fullName>InternalOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to capture the Internal owner of a SPA Request - Sales Rep who reviews the request.</description>
    <label>Internal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPARequestsInternalOwners</relationshipName>
    <type>Lookup</type>
</CustomField>