force-app/main/default/objects/SPA_Request__c/fields/isAutoApproved__c.field-meta.xml
<CustomField>
    <fullName>isAutoApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAutoApproved</label>
    <type>Checkbox</type>
</CustomField>