force-app/main/default/objects/SPA_Request__c/fields/Last_Modified_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Id__c</fullName>
    <label>Last Modified By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>