force-app/main/default/objects/SPA_Request__c/fields/Last_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Submitted_Date__c</fullName>
    <label>Last Submitted Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>