force-app/main/default/objects/SPA_Request__c/fields/Lock_Grid__c.field-meta.xml
<CustomField>
    <fullName>Lock_Grid__c</fullName>
    <description>Provides an English description with regards to the reason that the price level grid is in read only status</description>
    <label>Lock Benefits Grid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>