force-app/main/default/objects/SPA_Request__c/fields/LockEligibilityGrid__c.field-meta.xml
<CustomField>
    <fullName>LockEligibilityGrid__c</fullName>
    <description>Provides an English description with regards to the reason that the eligibility grid is in read only status</description>
    <label>Lock Eligibility Grid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>