force-app/main/default/objects/SPA_Request__c/fields/Name_1__c.field-meta.xml
<CustomField>
    <fullName>Name_1__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>