force-app/main/default/objects/SPA_Request__c/fields/NetChange__c.field-meta.xml
<CustomField>
    <fullName>NetChange__c</fullName>
    <description>Percentage of Variance Impact divided by last 12 months of sales</description>
    <label>Net Change</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>