force-app/main/default/objects/SPA_Request__c/fields/Original_Primary_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Original_Primary_Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAQM-7185</description>
    <label>Original Primary Purchaser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPA Requests (Original Primary Purchaser)</relationshipLabel>
    <relationshipName>SPA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>