force-app/main/default/objects/SPA_Request__c/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <label>Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>