force-app/main/default/objects/SPA_Request__c/fields/Premium_Percent_Response__c.field-meta.xml
<CustomField>
    <fullName>Premium_Percent_Response__c</fullName>
    <label>Premium Percent Response</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>