force-app/main/default/objects/SPA_Request__c/fields/Price_Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Price_Authorizer__c</fullName>
    <label>Price Authorizer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>