force-app/main/default/objects/SPA_Request__c/fields/Price_Authorizer_Email__c.field-meta.xml
<CustomField>
    <fullName>Price_Authorizer_Email__c</fullName>
    <label>Price Authorizer Email</label>
    <type>Email</type>
</CustomField>