force-app/main/default/objects/SPA_Request__c/fields/Price_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Queue_Name__c</fullName>
    <label>Price Queue Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>