force-app/main/default/objects/SPA_Request__c/fields/PriceAgreementName__c.field-meta.xml
<CustomField>
    <fullName>PriceAgreementName__c</fullName>
    <description>Price Agreement Name to display on the SPA Request</description>
    <label>Price Agreement Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>