force-app/main/default/objects/SPA_Request__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <label>Price Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>