force-app/main/default/objects/SPA_Request__c/fields/PriceIncreasePending__c.field-meta.xml
<CustomField>
    <fullName>PriceIncreasePending__c</fullName>
    <description>Field used to indicate the status of a price increase affecting a SPA Request</description>
    <label>Price Increase Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>