force-app/main/default/objects/SPA_Request__c/fields/Pro_Rebate_Branches__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rebate_Branches__c</fullName>
    <label>Pro Rebate Branches</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>