force-app/main/default/objects/SPA_Request__c/fields/PurchaserPrimaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PurchaserPrimaryBusinessType__c</fullName>
    <label>Purchaser Primary Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>