force-app/main/default/objects/SPA_Request__c/fields/PurchaserSecondaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PurchaserSecondaryBusinessType__c</fullName>
    <label>Purchaser Secondary Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>