force-app/main/default/objects/SPA_Request__c/fields/Quote_To__c.field-meta.xml
<CustomField>
    <fullName>Quote_To__c</fullName>
    <description>being used for searching in global</description>
    <externalId>true</externalId>
    <label>Quote To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>