force-app/main/default/objects/SPA_Request__c/fields/Quote_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_To_Account_Number__c</fullName>
    <label>Quote To Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>