force-app/main/default/objects/SPA_Request__c/fields/Quote_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPA Requests (Customer)</relationshipLabel>
    <relationshipName>SPA_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>