force-app/main/default/objects/SPA_Request__c/fields/Rebate_DropShip__c.field-meta.xml
<CustomField>
    <fullName>Rebate_DropShip__c</fullName>
    <label>Rebate/Drop Ship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Drop Ship</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>