force-app/main/default/objects/SPA_Request__c/fields/Relationship_Price__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relationship Price</label>
    <type>Checkbox</type>
</CustomField>