force-app/main/default/objects/SPA_Request__c/fields/Requested_Price_Justification_Response__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_Justification_Response__c</fullName>
    <label>Requested Price Justification Response</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>