force-app/main/default/objects/SPA_Request__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <description>SAPR-1080</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Request</fullName>
            </value>
            <value>
                <fullName>Relationship Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>