force-app/main/default/objects/SPA_Request__c/fields/Revision_History__c.field-meta.xml
<CustomField>
    <fullName>Revision_History__c</fullName>
    <label>Revision History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>