force-app/main/default/objects/SPA_Request__c/fields/RevisionHistory__c.field-meta.xml
<CustomField>
    <fullName>RevisionHistory__c</fullName>
    <formula>&apos;Rev: &apos; + TEXT(SPD_Rev__c) + &apos; &apos; +
    IF(
        OR(
            SPD_Rev__c &gt; 0,
            AND(
                SPD_Rev__c = 0,
                OR(ISPICKVAL(Status__c, &apos;Authorized&apos;),ISPICKVAL(Status__c, &apos;Finalized&apos;),ISPICKVAL(Status__c, &apos;Acknowledged&apos;),ISPICKVAL(Status__c, &apos;Not Authorized&apos;))
            )
        ),
        HYPERLINK(&apos;/lightning/cmp/c__spaRequestHistoryConsoleView?c__recordId=&apos; &amp; Id , &apos;Click Here&apos;, &apos;_blank&apos;),
        &apos;&apos;
    )</formula>
    <label>Revision History</label>
    <type>Text</type>
</CustomField>