force-app/main/default/objects/SPA_Request__c/fields/Rolling12MonthSales__c.field-meta.xml
<CustomField>
    <fullName>Rolling12MonthSales__c</fullName>
    <description>Agreement Last 12 Months of Sales</description>
    <label>Rolling 12 Month Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>