force-app/main/default/objects/SPA_Request__c/fields/Sales_Office_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Territory__c</fullName>
    <label>Direct Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>