force-app/main/default/objects/SPA_Request__c/fields/Sales_Org_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Country_Code__c</fullName>
    <label>Sales Org Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>