force-app/main/default/objects/SPA_Request__c/fields/SapAgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>SapAgreementNumber__c</fullName>
    <label>SAP Agreement Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>