force-app/main/default/objects/SPA_Request__c/fields/SapAgreementReqNbr__c.field-meta.xml
<CustomField>
    <fullName>SapAgreementReqNbr__c</fullName>
    <label>SAP Agreement Request Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>