force-app/main/default/objects/SPA_Request__c/fields/SAPAgreementRequest__c.field-meta.xml
<CustomField>
    <fullName>SAPAgreementRequest__c</fullName>
    <description>Unqiue SAP Agreement Request</description>
    <externalId>true</externalId>
    <label>SAP Agreement Request</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>