force-app/main/default/objects/SPA_Request__c/fields/SAPAgreementRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPAgreementRequestNumber__c</fullName>
    <label>SAP Agreement Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>