force-app/main/default/objects/SPA_Request__c/fields/SapAgreementStatusMsg__c.field-meta.xml
<CustomField>
    <fullName>SapAgreementStatusMsg__c</fullName>
    <label>SAP Transaction Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>