force-app/main/default/objects/SPA_Request__c/fields/SapDirectAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SapDirectAccountNumber__c</fullName>
    <description>S4 Direct Account Number Text Value implemented to support Global Search</description>
    <label>Sap Direct Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>