force-app/main/default/objects/SPA_Request__c/fields/SapIndirectAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SapIndirectAccountNumber__c</fullName>
    <description>S4 Indirect Account Number Text Value implemented to support Global Search</description>
    <label>Sap Indirect Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>