force-app/main/default/objects/SPA_Request__c/fields/SAPRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPRequestStatus__c</fullName>
    <description>SAP Request Status</description>
    <label>SAP Request Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>