force-app/main/default/objects/SPA_Request__c/fields/SAPTransactionMessage__c.field-meta.xml
<CustomField>
    <fullName>SAPTransactionMessage__c</fullName>
    <label>SAP Transaction Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>