force-app/main/default/objects/SPA_Request__c/fields/SapTransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>SapTransactionStatus__c</fullName>
    <label>SAP Transaction Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>