force-app/main/default/objects/SPA_Request__c/fields/ShowAgreementLines__c.field-meta.xml
<CustomField>
    <fullName>ShowAgreementLines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Agreement Lines</label>
    <type>Checkbox</type>
</CustomField>