force-app/main/default/objects/SPA_Request__c/fields/SPA_Size__c.field-meta.xml
<CustomField>
    <fullName>SPA_Size__c</fullName>
    <label>SPA Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>