force-app/main/default/objects/SPA_Request__c/fields/SPD_Comment__c.field-meta.xml
<CustomField>
    <fullName>SPD_Comment__c</fullName>
    <label>SPD Comment</label>
    <length>15</length>
    <type>Text</type>
</CustomField>