force-app/main/default/objects/SPA_Request__c/fields/SPD_Rev__c.field-meta.xml
<CustomField>
    <fullName>SPD_Rev__c</fullName>
    <label>SPD Rev</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>