force-app/main/default/objects/SPA_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubmittedBySPARequests</relationshipName>
    <type>Lookup</type>
</CustomField>