force-app/main/default/objects/SPA_Request__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Authorization</fullName>
            </value>
            <value>
                <fullName>Authorization in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>PA Agreement - Integration Error</fullName>
            </value>
            <value>
                <fullName>Submitted to Sales</fullName>
            </value>
            <value>
                <fullName>Not Validated</fullName>
            </value>
            <value>
                <fullName>Return to Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>