force-app/main/default/objects/SPA_Request__c/fields/Total12MonthExpectedImpact__c.field-meta.xml
<CustomField>
    <fullName>Total12MonthExpectedImpact__c</fullName>
    <description>Twelve Month Expected Sales Increase if Price Increase is taken without any adjustments.</description>
    <label>Total 12 Month Expected Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>