force-app/main/default/objects/SPA_Request__c/fields/TransferFromExpireDate__c.field-meta.xml
<CustomField>
    <fullName>TransferFromExpireDate__c</fullName>
    <description>(Transfer) From Expiration Date</description>
    <label>Transfer From Expire Date</label>
    <type>Date</type>
</CustomField>