force-app/main/default/objects/SPA_Request__c/fields/UIStatus__c.field-meta.xml
<CustomField>
    <fullName>UIStatus__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>