force-app/main/default/objects/SPA_Request__c/fields/VarianceImpact__c.field-meta.xml
<CustomField>
    <fullName>VarianceImpact__c</fullName>
    <description>Percentage Increase /decrease of the price action compared against the current agreement price level</description>
    <label>Variance Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>