force-app/main/default/objects/SPA_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RequestType__c</columns>
    <columns>Status__c</columns>
    <columns>Bill_To_Name__c</columns>
    <columns>Quote_To_Name__c</columns>
    <columns>SapAgreementNumber__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>